--- a/about.html
+++ b/about.html
@@ -6,12 +6,9 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+:art:&nbsp;syoukeraの制作記録と備忘録のためのサイト
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+まだ製作中。Github pagesのテーマを少しずつ変更中。
 </p>
